# rulebreakers_test_case

./: Dockerfile  Makefile  README.MD  docker-compose.yml  pyproject.toml
task_manager/task_manager/: settings.py  urls.py
task_manager/task_manager_api/: models.py  serializers.py  services.py  urls.py  views.py
task_manager/task_manager_api/migrations/: 0001_initial.py
